fixed new issue of artsits boxes being way too high

--- a/styles/artists.css
+++ b/styles/artists.css
@@ -12,7 +12,7 @@
   gap: 25px;
   width: 100%;
   justify-content: center;
-  grid-auto-rows: 1fr;
+  /* grid-auto-rows: 1fr; */
 }
 
 .artist-card {
